--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,20 @@ body {
     justify-content: center;
     align-items: center;
   }
+
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  
+  .code-box {
+    width: 1235px;
+    height: 558px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    border: 1px solid #1A4243;
+    background: #FFF;
+    box-shadow: 10px 10px 4px 0px #3A9A9D;
+  }
