--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,19 @@ body {
     align-items: center;
   }
 
+  button {
+    cursor: pointer;
+    transition: 0.15s;
+  }
+  
+  button:hover {
+    opacity: 0.85;
+  }
+  
+  button:active {
+    opacity: 0.7;
+  }
+
   .main {
     background-color: #DFF0F0;
   }
