--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@ body {
     height: auto;
     margin-left: 20px;
   }
+
+  .logo:hover {
+    cursor: pointer; /* Change cursor to a pointer when hovering over the logo */
+  }
   
   .button-container {
     display: flex;
@@ -38,7 +42,7 @@ body {
     height: 38px;
     border-radius: 42px;
     margin-right: 10px;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     background: #04ACAC;
     box-shadow: 4px 4px 4px 0px #1A4243;
     color: #FFF;
@@ -55,7 +59,7 @@ body {
     height: 38px;
     border-radius: 42px;
     margin-right: 140px;
-    border: 1px solid #000;
+    border: 2px solid #000;
     background: #1A4243;
     box-shadow: 4px 4px 4px 0px #3A9A9D;
     color: #FFF;
@@ -70,6 +74,7 @@ body {
   button {
     cursor: pointer;
     transition: 0.15s;
+    border: none;
   }
   
   button:hover {
@@ -99,18 +104,15 @@ body {
     border: 1px solid #1A4243;
     background: #FFF;
     box-shadow: 10px 10px 4px 0px #3A9A9D;
-    padding: 30px;
+    border: 15px solid white;
+    padding: 20px;
     font-family: monospace;
     font-size: 14px;
     overflow: auto;
-    max-height: 72vh;
+    max-height: 71vh;
     max-width: 183vh;
     min-height: 200px;
     min-width: 250px;
+     
     /* resize: none; */
-  }
-
-  ::-webkit-scrollbar {
-    height: 1000px; /* Set the height of the scroll bar */
-    -webkit-appearance: none;
   }
