--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ body {
     flex-direction: column;
 }
 
-
 .navbar {
     position: fixed;
     top: 0;
@@ -87,10 +86,14 @@ body {
 
   .main {
     background-color: #DFF0F0;
+    display: flex;
+  flex-direction: column;
+  align-items: center;
   }
 
   .container {
     display: flex;
+    
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -110,9 +113,69 @@ body {
     font-size: 14px;
     overflow: auto;
     max-height: 71vh;
-    max-width: 183vh;
+    /* max-width: 182vh; */
+    max-width: 162vh;
     min-height: 200px;
     min-width: 250px;
      
     /* resize: none; */
+  }
+
+  .output-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 20px;
+  }
+  
+  .lexical-analyzer,
+  .syntax-analyzer  {
+    width: 455px;
+    height: 400px;
+    margin: 10px;
+    margin-top: -20px;
+    margin-bottom: 100px;
+    /* border: 1px solid #1A4243; */
+    border-radius: 50px;
+    background: #FFF;
+    box-shadow: 10px 10px 4px 0px #3A9A9D;
+    padding: 20px;
+    font-family: monospace;
+    font-size: 14px;
+  }
+ 
+  .output-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    margin-top: -10px;
+  }
+  
+  .flex-box1 {
+    margin-right: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .flex-box2 {
+    margin-left: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .text {
+    width: 368px;
+    height: 63px;
+    flex-shrink: 0;
+    color: #000000;
+    text-align: center;
+    text-shadow: 2px 2px 2px #01b5bb;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 20px;
   }
