--- a/templates/index.html
+++ b/templates/index.html
@@ -32,3 +32,5 @@
     <script src={{url_for('static',filename='script/script.js')}}></script>
 </body>
 </html>
+
+<!-- python -m flask --app .\app.py run -->
