--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
     <nav class="navbar">
       <img src="{{ url_for('static', filename='css/logo.png') }}" alt="Logo" class="logo">
       <div class="button-container">
-        <button class="run-code-btn">Run Code</button>
+        <button class="run-code-btn" onclick=executeCode()>Run Code</button>
         <input class="inputfile" name="file" type="file" id="inputfile" accept=".dtil" onchange="handleFile()">
-        <label for="inputfile">Upload a .dtil file</label>
+        <label for="inputfile">Upload File</label>
       </div>
     </nav>
   </header>
@@ -26,12 +26,13 @@
         <div class="text">Lexemes</div>
         <div class="lexical-analyzer">
             <pre id="output"> </pre>
-            <table> 
+            <table class="styled-table"> 
                 <thead> 
                     <th>Tokens</th>
                     <th>Lexemes</th>
                 </thead>
-                <tbody> </tbody>
+                <tbody> 
+                </tbody>
             </table>
 
         </div>
