--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -236,11 +236,11 @@ input {
   }
   .container{
     width: 90%;
-    margin; 0px;
+    margin: 0px;
   }
   .output-container{
     width: 80%;
-    margin; 0px;
+    margin: 0px;
     margin-top: -100px;
   }
 }
