--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
       <div class="button-container">
         <button class="run-code-btn" onclick=executeCode()>Run Code</button>
         <button class="generate_text_file run-code-btn" onclick=generateFile()>Create File</button>
+        <button class="export-table-btn , run-code-btn" onclick="exportTableToFile()">Export Table </button>
         <input class="inputfile" name="file" type="file" id="inputfile" accept=".dtil" onchange="handleFile()">
         <label for="inputfile">Upload File</label>
       </div>
