--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -226,8 +226,61 @@ input {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin-bottom: 10px;
+  margin-bottom: 2px;
 }
+
+.syntax-analyzer {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+  align-items: flex-start;
+  width: 95%;
+  height: 100vh;
+  margin: 0;
+  /* Adjust as needed */
+}
+
+.lexical{
+  width: 100%;
+  margin: 20px auto;
+}
+
+.last-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+.syntax-container{
+  width: 43%;
+  margin-top:20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.syntax-text {
+  height: auto;
+  color: #000000;
+  text-align: center;
+  text-shadow: 2px 2px 2px #01b5bb;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 2px;
+}
+
+.generate_syntaxText{
+  margin: 0px;
+}
+
+
 
 @media only screen and (max-width: 970px) {
   .main {
@@ -243,5 +296,22 @@ input {
     width: 80%;
     margin: 0px;
     margin-top: -100px;
+  }
+  .last-container{
+    width:80%;
+    margin: 0px;
+    margin-top: -100px;
+  }
+  .syntax-analyzer{
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: auto;
+  }
+  .syntax-container{
+    width: 100%;
+    margin-top:20px;
+    display: flex;
+    flex-direction: column;
   }
 }
