--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -265,19 +265,20 @@ input {
 .last-container{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
+  gap: 20px;
   width: 100%;
-  height: 100vh;
-  margin: 0;
+  height: 90vh;
+  margin-bottom: 50px;
 }
 
 .syntax-container{
-  width: 42%;
-  margin-top:20px;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
 }
 
 .syntax-text {
@@ -290,13 +291,35 @@ input {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin-bottom: 2px;
 }
 
 .generate_syntaxText{
   margin: 0px;
 }
 
+.syntax-table{
+  width: 100%;
+  height: 70vh;
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin-top: 20px;
+}
+
+.styled-table th,
+.styled-table td {
+  padding: 12px 15px;
+  text-align: left;
+}
+
+.styled-table th:nth-child(1),
+.styled-table td:nth-child(1) {
+  width: 6%; /* Adjust the width of the "Line" column as needed */
+}
+
+.syntax-table th:nth-child(2),
+.syntax-table td:nth-child(2) {
+  width: 20%; /* Adjust the width of the "Line" column as needed */
+}
 
 
 @media only screen and (max-width: 970px) {
