--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -299,10 +299,15 @@ input {
 .syntax-table{
   width: 100%;
   height: 70vh;
+  margin: 0 auto;
   border-collapse: collapse;
   border-spacing: 0;
   margin-top: 20px;
+  align-items: center;
+  align-self: center;
+  overflow-y: auto;
 }
+
 
 .styled-table th,
 .styled-table td {
