--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
       <div class="button-container">
         <button class="run-code-btn" onclick=executeCode()>Run Code</button>
         <button class="generate_text_file run-code-btn" onclick=generateFile()>Create File</button>
-        <button class="export-table-btn , run-code-btn" onclick="exportTableToFile()">Export Table </button>
+        <button class="export-table-btn  run-code-btn" onclick=exportTableToFile()>Export Table </button>
         <input class="inputfile" name="file" type="file" id="inputfile" accept=".dtil" onchange="handleFile()">
         <label for="inputfile">Upload File</label>
       </div>
@@ -53,7 +53,7 @@
           </tbody>
         </table>
       </div>
-      <button class="generate_syntaxText run-code-btn" id="leftmost-derivation-btn">Save Copy</button>
+      <button class="generate_syntaxText run-code-btn" id="leftmost-derivation-btn" onclick=exportsyntaxTableToFile()>Save Copy</button>
     </div>
   </div>
   <script src="{{ url_for('static', filename='script/script.js') }}"></script>
