--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -273,11 +273,21 @@ input {
 }
 
 .syntax-container{
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
+  width:80%; 
+  /* width: 33vw; */
+  height: auto;
+  margin-top: -20;
+  /* border: 1px solid #1A4243; */
+  background: #FFF;
+  box-shadow: 10px 10px 4px 0px #3A9A9D;
+  padding:  0 0;
+  font-family: monospace;
+  position: relative;
+  font-size: 14px;
+  overflow-x: auto;
+  max-height: 65vh;
+  min-height: 65vh;
+  -webkit-scrollbar { display: none; }
 }
 
 .syntax-text {
@@ -298,16 +308,20 @@ input {
 
 .syntax-table{
   width: 100%;
-  height: 70vh;
+  height: auto;
   margin: 0 auto;
   border-collapse: collapse;
   border-spacing: 0;
-  margin-top: 20px;
+  margin-top: 0;
+  justify-content: flex-start;
   align-items: center;
   align-self: center;
   overflow-y: auto;
 }
 
+.styled-table th{
+  margin-top:  0;
+}
 
 .styled-table th,
 .styled-table td {
